--- a/Pages/main.html
+++ b/Pages/main.html
@@ -270,7 +270,8 @@ window.onload = main;
         try{
         const productDiv = button.closest('.product');
         const itemId = productDiv.getAttribute('data-id');
-        const response = fetch('/api/items_to_users?user_id = ${userId}&item = ${itemId}',{
+        alert(`/api/items_to_users?user_id=${userId}&item=${itemId}`)
+        const response = fetch(`/api/items_to_users?user_id=${userId}&item_id=${itemId}`,{
             method: 'POST'
         });
         alert('Товар добавлен успешно')
